added jobs log endpoint
