# models/pipeline_with_builds.go
@@ -1,0 +1,154 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// PipelineWithBuilds pipeline with builds
+//
+// swagger:model PipelineWithBuilds
+type PipelineWithBuilds struct {
+
+	// builds
+	Builds []*Job `json:"Builds" xml:"Builds"`
+
+	// pipeline
+	Pipeline *Pipeline `json:"Pipeline,omitempty"`
+}
+
+// Validate validates this pipeline with builds
+func (m *PipelineWithBuilds) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateBuilds(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePipeline(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PipelineWithBuilds) validateBuilds(formats strfmt.Registry) error {
+	if swag.IsZero(m.Builds) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Builds); i++ {
+		if swag.IsZero(m.Builds[i]) { // not required
+			continue
+		}
+
+		if m.Builds[i] != nil {
+			if err := m.Builds[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("Builds" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *PipelineWithBuilds) validatePipeline(formats strfmt.Registry) error {
+	if swag.IsZero(m.Pipeline) { // not required
+		return nil
+	}
+
+	if m.Pipeline != nil {
+		if err := m.Pipeline.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("Pipeline")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this pipeline with builds based on the context it is used
+func (m *PipelineWithBuilds) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateBuilds(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidatePipeline(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PipelineWithBuilds) contextValidateBuilds(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Builds); i++ {
+
+		if m.Builds[i] != nil {
+			if err := m.Builds[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("Builds" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *PipelineWithBuilds) contextValidatePipeline(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.Pipeline != nil {
+		if err := m.Pipeline.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("Pipeline")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PipelineWithBuilds) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PipelineWithBuilds) UnmarshalBinary(b []byte) error {
+	var res PipelineWithBuilds
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
